--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(untitled)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(QuestionOne LabOne/QuestionOne.c)
-add_executable(QuestionTwo LabOne/QuestionTwo.c)
-add_executable(QuestionThree LabOne/QuestionThree.c)
+add_executable(QuestionOne LabTwo/QuestionOne.cpp)
+add_executable(QuestionTwo LabTwo/QuestionTwo.cpp)
+add_executable(QuestionThree LabTwo/QuestionThree.cpp)
+
+
+
