--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(untitled)
 set(CMAKE_CXX_STANDARD 14)
 
 
-add_executable(Exercise8 Exercises/Exercise8.c)
+add_executable(Exercise5 Exercises/Exercise5.cpp)
