--- a/cmake-build-debug-coverage/untitled.cbp
+++ b/cmake-build-debug-coverage/untitled.cbp
@@ -17,8 +17,8 @@
 					<DistClean command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="Exercise8">
-				<Option output="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Exercise8.exe" prefix_auto="0" extension_auto="0"/>
+			<Target title="Exercise5">
+				<Option output="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Exercise5.exe" prefix_auto="0" extension_auto="0"/>
 				<Option working_dir="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
@@ -32,14 +32,14 @@
 					<Add directory="C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/8.1.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 Exercise8"/>
+					<Build command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 Exercise5"/>
 					<CompileFile command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
 					<Clean command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 clean"/>
 					<DistClean command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="Exercise8/fast">
-				<Option output="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Exercise8.exe" prefix_auto="0" extension_auto="0"/>
+			<Target title="Exercise5/fast">
+				<Option output="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Exercise5.exe" prefix_auto="0" extension_auto="0"/>
 				<Option working_dir="C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
@@ -53,7 +53,7 @@
 					<Add directory="C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/8.1.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 Exercise8/fast"/>
+					<Build command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 Exercise5/fast"/>
 					<CompileFile command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
 					<Clean command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 clean"/>
 					<DistClean command="C:/PROGRA~1/MINGW-~1/X86_64~1.0-P/mingw64/bin/mingw32-make.exe -f &quot;C:/Users/Clirim/Documents/GitHub/oop/cmake-build-debug-coverage/Makefile&quot;  VERBOSE=1 clean"/>
@@ -80,8 +80,8 @@
 				</MakeCommands>
 			</Target>
 		</Build>
-		<Unit filename="C:/Users/Clirim/Documents/GitHub/oop/Exercises/Exercise8.c">
-			<Option target="Exercise8"/>
+		<Unit filename="C:/Users/Clirim/Documents/GitHub/oop/Exercises/Exercise5.cpp">
+			<Option target="Exercise5"/>
 		</Unit>
 		<Unit filename="C:/Users/Clirim/Documents/GitHub/oop/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
